--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "font-awesome": "^4.6.1",
     "bootstrap": "^3.3.6",
-    "angular": "^1.5.5"
+    "angular": "^1.5.5",
+    "bootstrap-social": "^4.12.0"
   }
 }
